clusters/demo/02-busybox.yml
apiVersion: v1
kind: Pod
metadata:
  name: curl-or-die
  namespace: test
spec:
  containers:
  - name: busybox
    image: docker.io/library/busybox:1.37
    command: ['bash']
