clusters/demo/02-workload-identity.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-peaker
  namespace: test
  labels:
    azure.workload.identity/use: "true"
spec:
  serviceAccountName: workload-identity-sa
  containers:
    - image: ghcr.io/azure/azure-workload-identity/msal-go
      name: oidc
